Option to instrument only first config file

--- a/docs/documentation.conf
+++ b/docs/documentation.conf
@@ -231,6 +231,7 @@ cmssw dir        = /path/for/VO_CMS_SW_DIR ; Path to manually add cmssw dir to s
 config file      = %(project area)s/src/Test/Analysis/cmssw-grid.py
 instrumentation  = True                 ; Append fragment for CMSSW all config files - default: True
 instrumentation fragment = fragment.py  ; Specifies path to fragment - default: <...>/fragmentForCMSSW.py
+instrument only first = False           ; Instrument only first config file (e.g., run over dataset and then subsequent reco/analysis steps)
 
 software requirements    = True         ; Write CMSSW version into job requirements - default: True
 gzip output        = True               ; Gzip the output of the cmsRun command - default: True
