ÄAdd the option to instrument only the first config in the chain

--- a/docs/documentation.conf
+++ b/docs/documentation.conf
@@ -231,6 +231,8 @@ cmssw dir        = /path/for/VO_CMS_SW_DIR ; Path to manually add cmssw dir to s
 config file      = %(project area)s/src/Test/Analysis/cmssw-grid.py
 instrumentation  = True                 ; Append fragment for CMSSW all config files - default: True
 instrumentation fragment = fragment.py  ; Specifies path to fragment - default: <...>/fragmentForCMSSW.py
+instrument_only_first_fragment = False  ; Only instrument the first config file in the chain,
+                                        ; othersie instrument all- default: False
 
 software requirements    = True         ; Write CMSSW version into job requirements - default: True
 gzip output        = True               ; Gzip the output of the cmsRun command - default: True
